fix repo description small width

--- a/src/pages/User/reposcard.scss
+++ b/src/pages/User/reposcard.scss
@@ -57,6 +57,7 @@ $stripe-bg-color: rgb(231, 229, 229);
         .repo-description {
             font-style: italic;
             font-size: $description-font-size;
+            word-break: break-word;
         }
     }
 }
